--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,8 @@
 <script src="reconnecting-websocket.min.js"></script>
 <script src="socket.io/socket.io.min.js"></script>
+<script src="channel.js"></script>
+<script src="script.js" defer></script>
 <script src="irc-message.js"></script>
 <script src="tmi.js"></script>
-<script src="script.js" defer></script>
 
 <audio id="tts" autoplay> </audio>
