--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <script src="channel.js"></script>
 <script src="script.js" defer></script>
 <script src="irc-message.js"></script>
+<script src="commands.js"></script>
 <script src="tmi.js"></script>
 
 <audio id="tts" autoplay> </audio>
