--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,13 @@
+<style>
+    body {
+        font-family: Arial;
+    }
+
+</style>
+
+<link href="https://cdn.jsdelivr.net/npm/siiimple-toast/dist/style.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/siiimple-toast/dist/siiimple-toast.min.js"></script>
+
 <script src="reconnecting-websocket.min.js"></script>
 <script src="socket.io/socket.io.min.js"></script>
 <script src="channel.js"></script>
